# toxic-cicd

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: app.py
configs/: promotion.yaml
scripts/: download_artifacts.py  promote.py  upload_artifacts.py
src/: evaluate.py  explain.py  features.py  model.py  predict.py  schemas.py  tracking.py  train.py  train_sentiment.py  utils.py
src/signals/: base.py  hatespeech.py  model.py  pii.py  sentiment.py  toxicity.py  vader_labels.py
tests/: test_data_contracts.py  test_evaluate.py  test_explain.py  test_features.py  test_hatespeech.py  test_labels.py  test_model.py  test_pii_signal.py  test_predict.py  test_sentiment_signal.py  test_smoke.py  test_tracking.py
