[project]
name = "toxic-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "scikit-learn>=1.4,<2",
    "joblib>=1.3,<2",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "vaderSentiment>=3.3,<4",
    "pyyaml>=6.0,<7",
    "google-cloud-storage>=2.16,<3",
]
