[project]
name = "toxic-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "scikit-learn>=1.4,<2",
    "joblib>=1.3,<2",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "vaderSentiment>=3.3,<4",
    "pyyaml>=6.0,<7",
    "google-cloud-storage>=2.16,<3",
    "shap>=0.49.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.8,<1",
    "pre-commit>=4.0,<5",
    "httpx>=0.28.1",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
